// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`properly changes state variables 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MyMassages />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <InfoAlert
          onClose={[Function]}
        >
          On this page you can view all your assigned massages. To view massage details click on the event name.
        </InfoAlert>,
        <div
          className="no-print"
        >
          <Nav
            className="mb-3 mt-4"
            tabs={true}
            tag="ul"
            vertical={false}
          >
            <Tab
              active={true}
              label="All"
              onClick={[Function]}
              onRemoveClick={null}
            />
            <span
              style={
                Object {
                  "width": "100%",
                }
              }
            />
          </Nav>
        </div>,
        <MyMassagePanel
          events={
            Array [
              Object {
                "massage": Object {
                  "client": null,
                  "date": 1970-01-01T00:00:00.000Z,
                  "ending": 1970-01-01T00:00:01.000Z,
                  "facility": Object {
                    "id": 1,
                    "name": "test",
                  },
                  "id": 1,
                },
              },
            ]
          }
          onCancel={[Function]}
        />,
      ],
      "className": "my-3",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "On this page you can view all your assigned massages. To view massage details click on the event name.",
          "onClose": [Function],
        },
        "ref": null,
        "rendered": "On this page you can view all your assigned massages. To view massage details click on the event name.",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Nav
            className="mb-3 mt-4"
            tabs={true}
            tag="ul"
            vertical={false}
          >
            <Tab
              active={true}
              label="All"
              onClick={[Function]}
              onRemoveClick={null}
            />
            <span
              style={
                Object {
                  "width": "100%",
                }
              }
            />
          </Nav>,
          "className": "no-print",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Tab
                active={true}
                label="All"
                onClick={[Function]}
                onRemoveClick={null}
              />,
              Array [],
              <span
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />,
            ],
            "className": "mb-3 mt-4",
            "tabs": true,
            "tag": "ul",
            "vertical": false,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": true,
                "label": "All",
                "onClick": [Function],
                "onRemoveClick": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": false,
                "style": Object {
                  "width": "100%",
                },
              },
              "ref": null,
              "rendered": false,
              "type": "span",
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "events": Array [
            Object {
              "massage": Object {
                "client": null,
                "date": 1970-01-01T00:00:00.000Z,
                "ending": 1970-01-01T00:00:01.000Z,
                "facility": Object {
                  "id": 1,
                  "name": "test",
                },
                "id": 1,
              },
            },
          ],
          "onCancel": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <InfoAlert
            onClose={[Function]}
          >
            On this page you can view all your assigned massages. To view massage details click on the event name.
          </InfoAlert>,
          <div
            className="no-print"
          >
            <Nav
              className="mb-3 mt-4"
              tabs={true}
              tag="ul"
              vertical={false}
            >
              <Tab
                active={true}
                label="All"
                onClick={[Function]}
                onRemoveClick={null}
              />
              <span
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
            </Nav>
          </div>,
          <MyMassagePanel
            events={
              Array [
                Object {
                  "massage": Object {
                    "client": null,
                    "date": 1970-01-01T00:00:00.000Z,
                    "ending": 1970-01-01T00:00:01.000Z,
                    "facility": Object {
                      "id": 1,
                      "name": "test",
                    },
                    "id": 1,
                  },
                },
              ]
            }
            onCancel={[Function]}
          />,
        ],
        "className": "my-3",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "On this page you can view all your assigned massages. To view massage details click on the event name.",
            "onClose": [Function],
          },
          "ref": null,
          "rendered": "On this page you can view all your assigned massages. To view massage details click on the event name.",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Nav
              className="mb-3 mt-4"
              tabs={true}
              tag="ul"
              vertical={false}
            >
              <Tab
                active={true}
                label="All"
                onClick={[Function]}
                onRemoveClick={null}
              />
              <span
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
            </Nav>,
            "className": "no-print",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <Tab
                  active={true}
                  label="All"
                  onClick={[Function]}
                  onRemoveClick={null}
                />,
                Array [],
                <span
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                />,
              ],
              "className": "mb-3 mt-4",
              "tabs": true,
              "tag": "ul",
              "vertical": false,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "active": true,
                  "label": "All",
                  "onClick": [Function],
                  "onRemoveClick": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": false,
                  "style": Object {
                    "width": "100%",
                  },
                },
                "ref": null,
                "rendered": false,
                "type": "span",
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "events": Array [
              Object {
                "massage": Object {
                  "client": null,
                  "date": 1970-01-01T00:00:00.000Z,
                  "ending": 1970-01-01T00:00:01.000Z,
                  "facility": Object {
                    "id": 1,
                    "name": "test",
                  },
                  "id": 1,
                },
              },
            ],
            "onCancel": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders content correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MyMassages />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <InfoAlert
          onClose={[Function]}
        >
          On this page you can view all your assigned massages. To view massage details click on the event name.
        </InfoAlert>,
        <div
          className="no-print"
        >
          <Nav
            className="mb-3 mt-4"
            tabs={true}
            tag="ul"
            vertical={false}
          >
            <Tab
              active={true}
              label="All"
              onClick={[Function]}
              onRemoveClick={null}
            />
            <span
              style={
                Object {
                  "width": "100%",
                }
              }
            />
          </Nav>
        </div>,
        <h3>
          None – 
          <Link
            replace={false}
            style={
              Object {
                "color": "#595959",
              }
            }
            to="/"
          >
            Go to massages
          </Link>
        </h3>,
      ],
      "className": "my-3",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "On this page you can view all your assigned massages. To view massage details click on the event name.",
          "onClose": [Function],
        },
        "ref": null,
        "rendered": "On this page you can view all your assigned massages. To view massage details click on the event name.",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Nav
            className="mb-3 mt-4"
            tabs={true}
            tag="ul"
            vertical={false}
          >
            <Tab
              active={true}
              label="All"
              onClick={[Function]}
              onRemoveClick={null}
            />
            <span
              style={
                Object {
                  "width": "100%",
                }
              }
            />
          </Nav>,
          "className": "no-print",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Tab
                active={true}
                label="All"
                onClick={[Function]}
                onRemoveClick={null}
              />,
              Array [],
              <span
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />,
            ],
            "className": "mb-3 mt-4",
            "tabs": true,
            "tag": "ul",
            "vertical": false,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "active": true,
                "label": "All",
                "onClick": [Function],
                "onRemoveClick": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": false,
                "style": Object {
                  "width": "100%",
                },
              },
              "ref": null,
              "rendered": false,
              "type": "span",
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "None – ",
            <Link
              replace={false}
              style={
                Object {
                  "color": "#595959",
                }
              }
              to="/"
            >
              Go to massages
            </Link>,
          ],
        },
        "ref": null,
        "rendered": Array [
          "None – ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Go to massages",
              "replace": false,
              "style": Object {
                "color": "#595959",
              },
              "to": "/",
            },
            "ref": null,
            "rendered": "Go to massages",
            "type": [Function],
          },
        ],
        "type": "h3",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <InfoAlert
            onClose={[Function]}
          >
            On this page you can view all your assigned massages. To view massage details click on the event name.
          </InfoAlert>,
          <div
            className="no-print"
          >
            <Nav
              className="mb-3 mt-4"
              tabs={true}
              tag="ul"
              vertical={false}
            >
              <Tab
                active={true}
                label="All"
                onClick={[Function]}
                onRemoveClick={null}
              />
              <span
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
            </Nav>
          </div>,
          <h3>
            None – 
            <Link
              replace={false}
              style={
                Object {
                  "color": "#595959",
                }
              }
              to="/"
            >
              Go to massages
            </Link>
          </h3>,
        ],
        "className": "my-3",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "On this page you can view all your assigned massages. To view massage details click on the event name.",
            "onClose": [Function],
          },
          "ref": null,
          "rendered": "On this page you can view all your assigned massages. To view massage details click on the event name.",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Nav
              className="mb-3 mt-4"
              tabs={true}
              tag="ul"
              vertical={false}
            >
              <Tab
                active={true}
                label="All"
                onClick={[Function]}
                onRemoveClick={null}
              />
              <span
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
            </Nav>,
            "className": "no-print",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <Tab
                  active={true}
                  label="All"
                  onClick={[Function]}
                  onRemoveClick={null}
                />,
                Array [],
                <span
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                />,
              ],
              "className": "mb-3 mt-4",
              "tabs": true,
              "tag": "ul",
              "vertical": false,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "active": true,
                  "label": "All",
                  "onClick": [Function],
                  "onRemoveClick": null,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": false,
                  "style": Object {
                    "width": "100%",
                  },
                },
                "ref": null,
                "rendered": false,
                "type": "span",
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "None – ",
              <Link
                replace={false}
                style={
                  Object {
                    "color": "#595959",
                  }
                }
                to="/"
              >
                Go to massages
              </Link>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "None – ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Go to massages",
                "replace": false,
                "style": Object {
                  "color": "#595959",
                },
                "to": "/",
              },
              "ref": null,
              "rendered": "Go to massages",
              "type": [Function],
            },
          ],
          "type": "h3",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
